Added Razor pay full

--- a/src/app/feature/customer-dashboard/customer-dashboard/customer-dashboard.component.html
+++ b/src/app/feature/customer-dashboard/customer-dashboard/customer-dashboard.component.html
@@ -73,6 +73,10 @@
   
   
         <main>
+        <!--  test start-->
+          <button (click)="clicked()"> Request</button>
+          <a routerLink="payment">payment</a>
+        <!--  test end  -->
           <router-outlet></router-outlet>
         </main>
   
@@ -81,4 +85,3 @@
     </mat-sidenav-container>
   
   </div>
-  
